run ScalaStyle in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ cache:
     - $HOME/.sbt/boot
     - $HOME/.ivy2/cache
 
+script:
+  - sbt ++$TRAVIS_SCALA_VERSION clean scalastyle test
+
 notifications:
   email:
     - neville@spotify.com
